--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 <h1>Contact Me</h1>
+<p>Phone Number: 08038129583</p>
 <p><a href="https://wa.link/0k02vh">Whatsapp</a></p>
 <p><a href="https://tinachukwuma773@gmail.com">Gmailtinachukwuma773@gmail.com</a></p>
 <p>Address:</p>
