--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Justina Chukwuma</h1>
     <img src="./T.jpg" height="200" />
     <h2>Summary:</h2>
-    <P>Reliable full stack web Developer,  determined and dedicated to providing optimal services for the growth of the organization where she finds herself.Anticipating a challenging position in a prestigious organization to utilize my skills for the tremendious growth of the organization and to expand my knowledge.</P>
+    <P>Reliable customer Service Representative,  determined and dedicated to providing optimal services for the growth of the organization where she finds herself.Anticipating a challenging position in a prestigious organization to utilize my skills for the tremendious growth of the organization and to expand my knowledge.</P>
     <hr />
 <h2>Education:</h2>
 <p>Higher National Diploma In Marketing- Institute Of Management And Technology Enugu. (2018-2021)</p>
